<resources>
    <string name="app_name">Climbers Counter</string>
    <string name="LogoDesc">NME logo</string>
<!-- Climbing Route names -->
    <string name="route1">Climbing Route #1</string>
    <string name="route2">Climbing Route #2</string>
    <string name="route3">Climbing Route #3</string>
    <string name="route4">Climbing Route #4</string>
    <string name="route5">Climbing Route #5</string>
    <string name="route6">Climbing Route #6</string>
<!-- Score terminology -->
    <string name="top">top</string>
    <string name="bonus">bonus</string>
    <string name="tries">try</string>
    <string name="points">points</string>
    <string name="currentTry">0</string>
    <string name="outOfPossibleTries">/5</string>
    <!-- Buttons -->
    <string name="btnStart">start</string>
    <string name="btnQuit">quit</string>
    <string name="btnBonus">bonus</string>
    <string name="btnTop">top</string>
    <string name="btnReset">reset</string>

<!-- Teams -->
    <string name="teamA">Asam Ondra</string>
    <string name="teamB">Chris Sharma</string>
<!-- Default Text Values -->
    <string name="defaultScoreCounter">0</string>
    <string name="defaultTopsCounter">0</string>
    <string name="defaultBonusCounter">0</string>
    <string name="defaultTimerVal">00:00:0</string>
    <!--Image Descriptions-->
    <string name="BackgroundImageDesc">Picture of an Indoor Boulder Wall</string>
</resources>